# experiments

./: LICENSE
hellOpenGL/: .clang-format  CMakeLists.txt
hellOpenGL/src/: main.cpp
vector/: .clang-format  .gitignore  CMakeLists.txt
vector/src/: main.cpp
vector/src/myarray/: myarray.cpp  myarray.h  myarray.tpp
vector/tests/myarray/: myarray.cpp
